dist/1.0/bin/sample/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Identification_Type__c</fullName>
        <description>SK colorado defiend field which is deprecated now.</description>
        <inlineHelpText>Customer Identification Type. Deprecated.</inlineHelpText>
        <label>Account Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate entity</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Civil service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account SFDC specific ID number which is autmoatically generated during Account creation.</description>
        <displayFormat>ACC{000000000}</displayFormat>
        <inlineHelpText>Account SFDC specific ID number which is autmoatically generated during Account creation.</inlineHelpText>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_formula__c</fullName>
        <description>Provides Record Type Name depending on rectord type id</description>
        <formula>CASE(RecordTypeId, &quot;&apos;01220000000LWcv&quot;, &quot;Partner&quot;,&quot;01220000000LWct&quot;, &quot;Company&quot;, &quot;012200000009GNq&quot;,&quot;International Wholesale&quot;,&quot;0122000000094uK&quot;,&quot;International Retail&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides Record Type Name depending on rectord type id</inlineHelpText>
        <label>Account Record Type formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Validation__c</fullName>
        <description>Newly created Account is to be verified if it is not duplicated. 
The field shows starus of this verification.</description>
        <inlineHelpText>Newly created Account is to be verified if it is not duplicated. 
The field shows starus of this verification.</inlineHelpText>
        <label>Account Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Unverified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if created by Lead conversion.</description>
        <inlineHelpText>Indicates that Account has been created by Lead conversion</inlineHelpText>
        <label>Account from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Segment__c</fullName>
        <description>Automatically set segment based on Account Revenue</description>
        <inlineHelpText>Segment ... Actual Value 

ME ... 10000 &lt;= P 
LE+ ... 4000 &lt;= P &lt;= 10000 
LE ... 2000 &lt;= P &lt;= 4000 
SME+ ... 800 &lt;= P &lt;= 2000 
SME ... 200 &lt;= P &lt;= 800 
SOHO+ ... 80 &lt;= P &lt;= 200 
SOHO ... 0 &lt;= P &lt;= 80</inlineHelpText>
        <label>Actual Segment</label>
        <picklist>
            <picklistValues>
                <fullName>SOHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOHO+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_to_Reg_Acc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used as chekcbox on visualforce page local_account_list (Set Parrent Account) used with Internation Retail accounts functionalit Set Parrent Account.</description>
        <inlineHelpText>Field used as chekcbox on visualforce page local_account_list (Set Parrent Account) used with Internation Retail accounts functionalit Set Parrent Account.</inlineHelpText>
        <label>Add to Reg Acc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <description>Name of Bank</description>
        <inlineHelpText>Name of Bank</inlineHelpText>
        <label>Bank Name</label>
        <referenceTo>Bank_Data__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <description>Code for Selected Bank</description>
        <formula>BankName__r.Bank_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Code for Selected Bank</inlineHelpText>
        <label>Bank Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_account_number__c</fullName>
        <description>Customer&apos;s main Bank Account Number</description>
        <inlineHelpText>Customer&apos;s main Bank Account Number</inlineHelpText>
        <label>Bank Account Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binding_contract_date__c</fullName>
        <description>Date of a contract with other operator.</description>
        <inlineHelpText>Date of a contract with other operator.</inlineHelpText>
        <label>Binding contract date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Authorization_Date__c</fullName>
        <description>Credit Chcecking. Date, when authorization was signed</description>
        <inlineHelpText>Credit Chcecking. Date, when authorization was signed</inlineHelpText>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Authorization_End_Date__c</fullName>
        <description>Credit Chcecking. Date, when Authorization expires. Credit check.</description>
        <formula>CC_Authorization_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Credit Chcecking. Date, when Authorization expires</inlineHelpText>
        <label>Authorization End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Check_Date__c</fullName>
        <description>Credit Chceck.The date when Credit Check has been performed</description>
        <inlineHelpText>Credit Chceck.The date when Credit Check has been performed</inlineHelpText>
        <label>Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_Check_Status__c</fullName>
        <description>Status of Credit Check</description>
        <inlineHelpText>Status of Credit Check</inlineHelpText>
        <label>Check Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Debt_Age__c</fullName>
        <description>Debt Age (T) for Credit Checking Process</description>
        <inlineHelpText>Debt Age (T) for Credit Checking Process</inlineHelpText>
        <label>Debt Age</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Debt_Index__c</fullName>
        <description>Debt Index (W) for Credit Checking Process</description>
        <inlineHelpText>Debt Index (W) for Credit Checking Process</inlineHelpText>
        <label>Debt Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Exists_in_InfoVerity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Imforms if Account exsit in InfoVerity system. Credit check</description>
        <inlineHelpText>Imforms if Account exsit in InfoVerity system</inlineHelpText>
        <label>Exists in InfoVerity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Exists_in_OIU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Chceck. Exist in OIU datatabase.</description>
        <inlineHelpText>Credit Chceck. Exist in OIU datatabase.</inlineHelpText>
        <label>Exists in OIU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Exists_in_ZBP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit checking. Exist in ZBP (Związek Banków Polskich) database.</description>
        <inlineHelpText>Credit checking. Exist in ZBP database.</inlineHelpText>
        <label>Exists in ZBP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Total_Debt_Currency__c</fullName>
        <description>Credit Check. Information about currency in which Total Debt is provided.</description>
        <inlineHelpText>Credit Check. Information about currency in which Total Debt is provided.</inlineHelpText>
        <label>Total Debt Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Total_Debt__c</fullName>
        <description>Credit Check. Infromation about debt.</description>
        <inlineHelpText>Credit Check. Infromation about debt.</inlineHelpText>
        <label>Total Debt</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Verification_Override__c</fullName>
        <description>Credit Check. Indicates if Customer was assigned to White or Black List</description>
        <inlineHelpText>Credit Check. Indicates if Customer was assigned to White or Black List</inlineHelpText>
        <label>Verification Override</label>
        <picklist>
            <picklistValues>
                <fullName>White List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_ZBP_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Checking. Customer&apos;s authorization in regard to ZBP (Związek Banków Polskich)</description>
        <inlineHelpText>Credit Checking. Customer&apos;s authorization in regard to ZBP</inlineHelpText>
        <label>ZBP Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_Person__c</fullName>
        <description>CARE_CZ_110_ Care_person</description>
        <inlineHelpText>Person who takes operational care of this customer</inlineHelpText>
        <label>Care Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_in_Court__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Check. Indicates if there is a case in court against this account.</description>
        <inlineHelpText>Credit Check. Indicates if there is a case in court against this account.</inlineHelpText>
        <label>Case in Court</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cession_of_Receivables__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Checking. Cession of Receivables</description>
        <inlineHelpText>Credit Checking. Cession of Receivables</inlineHelpText>
        <label>Cession of Receivables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Civil_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of Customer. SK defined</description>
        <inlineHelpText>Type of Customer</inlineHelpText>
        <label>Civil Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClassVAT__c</fullName>
        <description>Class VAT. Required by Billing.</description>
        <inlineHelpText>Class VAT:
- Company Outside EU
- EU Company with VAT Registration
- EU Company without VAT Registration
- Local Company without VAT Registration
- Locally Registered Company</inlineHelpText>
        <label>Class VAT</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Accounts (Class VAT)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_identification_number__c</fullName>
        <description>Company identification number. Deprecated - not used.</description>
        <inlineHelpText>Company identification number. Deprecated - not used.</inlineHelpText>
        <label>Company identification number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks Account as Competitor</description>
        <inlineHelpText>Marks Account as Competitor</inlineHelpText>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Account has already been created in Billing System</description>
        <inlineHelpText>Indicates if Account has already been created in Billing System</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_OCTT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informes whether Account has been createin OCTT or not</description>
        <inlineHelpText>Informes whether Account has been createin OCTT or not</inlineHelpText>
        <label>Created in OCTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerClass__c</fullName>
        <description>Customer Class. Billing required</description>
        <inlineHelpText>Customer Class:
- Company
- Foreigner
- Intercompany
- Other
- Person
- Self-Employee</inlineHelpText>
        <label>Customer Class</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner which is dealer of GTS services</description>
        <inlineHelpText>Partner which is dealer of GTS services</inlineHelpText>
        <label>Dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, Account will not be sent to OCTT</description>
        <inlineHelpText>If selected, Account will not be sent to OCTT</inlineHelpText>
        <label>Do not synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address of the company.</description>
        <inlineHelpText>Email address of the company.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <description>Number of emplyees</description>
        <inlineHelpText>Number of emplyees</inlineHelpText>
        <label>Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 - 199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 - 249</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 - 499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 - 999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 - 1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000 - 2999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 - 3999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000 - 4999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000 - 9999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000 - 19999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Status_Icon__c</fullName>
        <description>Graphical Indicator of Financial Status</description>
        <formula>IF( ISBLANK(Financial_Status__c), &apos;&apos;, IF( OR( Financial_Status__r.Value__c = &apos;CS1&apos;, Financial_Status__r.Value__c = &apos;CS2&apos;, Financial_Status__r.Value__c = &apos;CS3&apos;, Financial_Status__r.Value__c = &apos;CS4&apos;, Financial_Status__r.Value__c = &apos;CS5&apos;, Financial_Status__r.Value__c = &apos;KF&apos;, Financial_Status__r.Value__c = &apos;NP&apos;), IMAGE(&apos;https://emea.salesforce.com/servlet/servlet.ImageServer?id=01520000000sxut&amp;oid=00DP000000062Wu&amp;lastMod=1288005668000&apos;, &apos;Financial Status&apos;), IMAGE(&apos;https://emea.salesforce.com/servlet/servlet.ImageServer?id=01520000000vDSD&amp;oid=00DP000000062Wu&amp;lastMod=1288005037000&apos;, &apos;Financial Status&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Graphical Indicator of Financial Status</inlineHelpText>
        <label>Financial Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Status__c</fullName>
        <description>Financial Status from Billing Accounts</description>
        <inlineHelpText>Financial Status from Billing Accounts</inlineHelpText>
        <label>Financial Status</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Accounts (Financial Status)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <description>First name of Person/Residential customer. SK defined</description>
        <inlineHelpText>First name of Person/Residential customer</inlineHelpText>
        <label>First name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromLead__c</fullName>
        <description>Id of Lead which has been converted to this Account. Required by Extranet PL.</description>
        <inlineHelpText>Id of Lead which has been converted to this Account. Required by Extranet PL.</inlineHelpText>
        <label>FromLead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_ID__c</fullName>
        <description>Stores long version of SFDC record ID</description>
        <inlineHelpText>Stores long version of SFDC record ID</inlineHelpText>
        <label>Full ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTS_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GTS company identification. Check it if it´ s account from GTS group.</description>
        <inlineHelpText>GTS company identification. Check it if it´ s account from GTS group.</inlineHelpText>
        <label>GTS Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTS_Location_del__c</fullName>
        <description>Location of GTS branch by which the account is managed/owned</description>
        <inlineHelpText>Location of GTS branch by which the account is managed/owned</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for validation to check if account has primary registration address</description>
        <inlineHelpText>Marked if account has primary address</inlineHelpText>
        <label>Has Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine if Account has any Contacts assigned to it. Used for validation.</description>
        <inlineHelpText>Marked if account has at least one contact assigned.</inlineHelpText>
        <label>Has Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <description>Guide containing tips for Account Management</description>
        <formula>If ( Has_Address__c =false, &quot;Primary Registration Address is mandatory for Account Validation&quot;&amp;BR()
,null)&amp;
If ( TEXT(Account_Validation__c) &lt;&gt; &quot;Valid&quot;, &quot;To create Opportunity Account should be Valid&quot;&amp;BR()
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Guide containing tips for Account Management</inlineHelpText>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Extension__c</fullName>
        <description>ID Extension when filled out allows haveing 2 Accounts with the same ID type and number within GTS Location and Record Type. Field can be managed only by Admin</description>
        <inlineHelpText>ID Extension when filled out allows haveing 2 Accounts with the same ID type and number within GTS Location and Record Type. Field can be managed only by Admin</inlineHelpText>
        <label>ID Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identification_type__c</fullName>
        <description>Identification Type for ID Number to be entered</description>
        <inlineHelpText>Identification Type for ID Number to be entered</inlineHelpText>
        <label>ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company registration number</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EU VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name and Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCALA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Stores date time of account creation / update invoked by local GTS systems</description>
        <inlineHelpText>Stores date time of account creation / update invoked by local GTS systems</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Date__c</fullName>
        <description>The date when customer data were approved by manager last time</description>
        <inlineHelpText>The date when customer data were approved by manager last time</inlineHelpText>
        <label>Last Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Partner_Account_cleared__c</fullName>
        <description>Stores datetime when last time Partner Account was changed to null - needed for Extranet.</description>
        <inlineHelpText>Stores datetime when last time Partner Account was changed to null - needed for Extranet.</inlineHelpText>
        <label>Last Partner Account cleared</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <description>First name of Person/Residential customer. SK defined</description>
        <inlineHelpText>First name of Person/Residential customer.</inlineHelpText>
        <label>Last name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Custom links which are being displayed depending on GTS Location</description>
        <formula>CASE ( GTS_Location_del__c ,
&quot;GTS Czech Rep&quot;, HYPERLINK(&quot;http://www.justice.cz/xqw/xervlet/insl/index?sysinf.@typ=or&amp;sysinf.@strana=searchResults&amp;hledani.@typ=subjekt&amp;hledani.format.typHledani=x*&amp;hledani.podminka.subjekt=&quot;&amp;Name
, &quot;Link to: CZ OR&quot;)&amp;BR()&amp;
 HYPERLINK(&quot;http://wwwinfo.mfcr.cz/cgi-bin/ares/ares_es.cgi?jazyk=cz&amp;obch_jm=&amp;ico=&quot;
&amp;  Tax_Id__c &amp;&quot;&amp;cestina=cestina&amp;obec=&amp;k_fu=&amp;maxpoc=200&amp;ulice=&amp;cis_or=&amp;cis_po=&amp;setrid=ZADNE&amp;pr_for=&amp;okec=&amp;okec_h=&amp;xml=1&amp;filtr=0&quot;
, &quot;Link to: CZ Ares&quot;)&amp;BR()&amp;
HYPERLINK(&quot;http://proteus/cz/bi/_layouts/ReportServer/RSViewerPage.aspx?rv:RelativeReportUrl=/cz/bi/Reports/General/IDZ/IRES.rdl&amp;rv:ParamMode=Hidden&amp;rp:IC=&quot;&amp;  Tax_Id__c,&quot;Link to: IRES Report&quot;)&amp;BR()&amp;
HYPERLINK(&quot;http://proteus/cz/bi/_layouts/ReportServer/RSViewerPage.aspx?rv:RelativeReportUrl=/cz/bi/Reports/General/IDZ/Customer%20Overview.rdl&amp;rv:ParamMode=Hidden&amp;rp:Customer_ID=&quot;&amp;   Source_Record_Id__c ,&quot;Link to: IDZ&quot;),
&quot;GTS Hungary&quot;, HYPERLINK (&quot;http://www.cegadat.eu/&quot;, &quot;www.cegadat.eu&quot; )





,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom links with information related to Account</inlineHelpText>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_OCTT__c</fullName>
        <description>Direct link account in OCTT system</description>
        <formula>if(Created_in_OCTT__c, 
 if( $Organization.Id=&apos;00D200000008d5u&apos;,HYPERLINK(&quot;https://occe.gtsce.com/occe2cat/customer/efind/SFDC/&quot; &amp; Full_ID__c , &quot;Click here&quot;, &quot;_blank&quot;), 
    HYPERLINK(&quot; https://demo.in.gtsgroup.cz/occe2cat/customer/efind/SFDC/&quot; &amp; Full_ID__c , &quot;Click here&quot; , &quot;_blank&quot;)),&quot;&quot;)</formula>
        <inlineHelpText>Direct link account in OCTT system</inlineHelpText>
        <label>Link to OCTT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Account_Id__c</fullName>
        <description>Account Identifier used in Local CRM system</description>
        <inlineHelpText>Account Identifier used in Local CRM system</inlineHelpText>
        <label>Local Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Account_Owner__c</fullName>
        <description>Account Owner as in local system</description>
        <inlineHelpText>Account Owner as in local system</inlineHelpText>
        <label>Local Account Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NACE_2nd_level__c</fullName>
        <description>2nd level of NACE classification</description>
        <inlineHelpText>2nd level of NACE classification</inlineHelpText>
        <label>NACE (2nd level)</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Accounts (NACE (2nd level))</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NACE_Code__c</fullName>
        <description>NACE Code corresponding to NACE class</description>
        <formula>NACE__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>NACE Code corresponding to NACE class</inlineHelpText>
        <label>NACE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NACE__c</fullName>
        <description>Statistical Classification of Economic Activities in the European Community, Rev. 2</description>
        <inlineHelpText>Statistical Classification of Economic Activities in the European Community, Rev. 2</inlineHelpText>
        <label>NACE</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Accounts (NACE)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Billing_Accounts__c</fullName>
        <description>Number of Billing Accounts under Account</description>
        <inlineHelpText>Number of Billing Accounts under Account</inlineHelpText>
        <label>No of Billing Accounts</label>
        <summaryForeignKey>Billing_Accounts__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Opportunities__c</fullName>
        <description>Number of Opportunities under Account</description>
        <inlineHelpText>Number of Opportunities under Account</inlineHelpText>
        <label>No of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Partner involved in sales process to this Customer</description>
        <inlineHelpText>Partner involved in sales process to this Customer</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assigned Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>Email address from Partner Account assigend to Customer</description>
        <inlineHelpText>Email address of Partner assigend to Customer</inlineHelpText>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
</CustomObject>